# timeliner

./: Cargo.toml  README.md
samples/: ascii.txt  utf16bebom.txt  utf16lebom.txt  utf8.txt
src/: log_file_reader.rs  main.rs  utf8_line_reader.rs
